fix(css): align "next" link to the right when stacked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -793,6 +793,10 @@ main {
   .post-nav-link {
     max-width: 100%;
   }
+
+  .post-nav-next {
+    align-self: flex-end;
+  }
 }
 
 /* ========================================
